<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestMind</string>
    <string name="main_activity_title">TestMind</string>
    <string name="main_activity_delete_alert_dialog_title">Remove node</string>
    <string name="main_activity_delete_alert_dialog_content">Are you sure you want to delete node and all of the nodes it contains?</string>
    <string name="edit_activity_title">Title</string>
    <string name="edit_activity_tag_exists">Tag already exists</string>
    <string name="edit_activity_more_words_selected">Please select only one word</string>
    <string name="create_mode">Edit mode</string>
    <string name="view_mode">View mode</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="file">File</string>
    <string name="show">Show</string>
    <string name="next">Next</string>
    <string name="node_main_topic_dialog">Set Main Topic</string>
    <string name="node_main_topic_dialog_title">Text</string>
    <string name="node_main_topic_dialog_body">Body</string>
    <string name="node_main_topic_dialog_default_topic">Default topic</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="mode_active">mode is active</string>
    <string name="parent_node_not_selected">Please select a Parent Node</string>
    <string name="node_not_selected">Please select a Node</string>
    <string name="select_file_to_upload">Select a File to Import</string>
    <string name="install_file_manager">Please install a File Manager</string>
    <string name="edit_dialog_edit">Edit Node</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="edit_node_select_node_color">Node color</string>
    <string name="edit_node_content">Content</string>
    <string name="title_activity_test">Testing</string>
    <string name="click">Click on screen</string>
    <string name="btn_add">Add</string>
    <string name="btn_del">Delete</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_one">Hide one</string>
    <string name="btn_hide">Hide</string>
    <string name="btn_view">Vview</string>
    <string name="btn_zoom_in">zoom in</string>
    <string name="btn_zoom_out">zoom out</string>
    <string name="btn_connect">Connect</string>
    <string name="menu_open">Manage maps</string>
    <string name="menu_save">Save</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="menu_edit_structure">Structure editing</string>
    <string name="menu_test_structure">Structure testing</string>
    <string name="menu_test_content">Content testing</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_test">Test</string>
    <string name="menu_explore">Explore</string>
    <string name="testing_control_show_answer">Show answer</string>
    <string name="testing_control_next_question">Next question</string>
    <string name="testing_control_again">Testing again</string>
    <string name="testing_error_any_nodes">There are not nodes for testing!</string>
    <string name="testing_last_node">It is last node!</string>
    <string name="open_save_file">File: </string>
    <string name="open_save_error_empty_file">Name of file is empty!</string>
    <string name="open_save_error_any_file">There is not any file for open!</string>
    <string name="context_menu_delete">Delete</string>
    <string name="select_file_to_import">Select a File to import</string>
    <string name="create_new">New</string>
    <string name="send_to">Share Map</string>
    <string name="testing_activity_child_nodes">Child nodes</string>
    <string name="cannot_open_file">Can not open file %s.</string>
    <string name="unsupported_format">Unsupported file format</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_structure_testing">StructureTestingActivity</string>

</resources>